# temporal-workflow-explorer

./: .gitignore  CASCADING_WORKFLOWS.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  TEMPORAL_SETUP.md  YAML_WORKFLOWS.md  main.py  pyproject.toml  run_worker.py  test_yaml_workflow.py
app/: main.py
app/controllers/: __init__.py  action_controller.py  health_controller.py  workflow_controller.py
app/models/: __init__.py  workflow_models.py
app/temporal/: __init__.py  activities.py  client.py  dsl_loader.py  dsl_workflow.py  load_processing_workflow.yaml  worker.py  workflow_1_load_and_email.yaml  workflow_2_process.yaml  workflow_3_extract_and_update.yaml  workflows.py
